--- a/app/src/main/res/layout/header_row.xml
+++ b/app/src/main/res/layout/header_row.xml
@@ -3,47 +3,51 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="#C8E1FA"
+    android:background="#C6DBFF"
     android:padding="8dp"
-    android:layout_marginBottom="4dp">
+    android:gravity="center_vertical">
 
     <TextView
         android:layout_width="0dp"
-        android:layout_weight="2"
         android:layout_height="wrap_content"
+        android:layout_weight="1.2"
         android:text="تاریخ"
         android:textStyle="bold"
-        android:gravity="center"
-        android:textSize="16sp"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="15sp"
+        android:gravity="center" />
 
     <TextView
         android:layout_width="0dp"
-        android:layout_weight="2"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="مبلغ (ریال)"
         android:textStyle="bold"
-        android:gravity="center"
-        android:textSize="16sp"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="15sp"
+        android:gravity="center" />
 
     <TextView
         android:layout_width="0dp"
-        android:layout_weight="1.5"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="بابت"
         android:textStyle="bold"
-        android:gravity="center"
-        android:textSize="16sp"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="15sp"
+        android:gravity="center" />
 
     <TextView
         android:layout_width="0dp"
-        android:layout_weight="2"
         android:layout_height="wrap_content"
+        android:layout_weight="1.4"
         android:text="توضیحات"
         android:textStyle="bold"
-        android:gravity="center"
-        android:textSize="16sp"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="15sp"
+        android:gravity="center" />
+
+    <View
+        android:layout_width="36dp"
+        android:layout_height="wrap_content" />
 </LinearLayout>
