--- a/app/src/main/res/menu/menu_transaction_item.xml
+++ b/app/src/main/res/menu/menu_transaction_item.xml
@@ -5,4 +5,7 @@
     <item
         android:id="@+id/action_delete"
         android:title="حذف" />
+    <item
+        android:id="@+id/action_move"
+        android:title="جابجایی" />
 </menu>
