--- a/app/src/main/res/drawable/circle_touch_bg.xml
+++ b/app/src/main/res/drawable/circle_touch_bg.xml
@@ -1,5 +1,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@android:color/transparent" />
-    <stroke android:width="1dp" android:color="#CCCCCC" />
+    <solid android:color="#E0E0E0" />
 </shape>
