--- a/app/src/main/res/menu/menu_transaction_item.xml
+++ b/app/src/main/res/menu/menu_transaction_item.xml
@@ -1,11 +1,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_edit"
+        android:id="@+id/menu_edit"
         android:title="ویرایش" />
     <item
-        android:id="@+id/action_delete"
+        android:id="@+id/menu_delete"
         android:title="حذف" />
     <item
-        android:id="@+id/action_move"
+        android:id="@+id/menu_move"
         android:title="جابجایی" />
 </menu>
