--- a/app/src/main/res/menu/menu_transaction_item.xml
+++ b/app/src/main/res/menu/menu_transaction_item.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/action_edit"
-        android:title="ویرایش" />
-    <item
-        android:id="@+id/action_delete"
-        android:title="حذف" />
-    <item
-        android:id="@+id/action_move"
-        android:title="جابجایی" />
+    <item android:id="@+id/menu_edit" android:title="ویرایش" />
+    <item android:id="@+id/menu_delete" android:title="حذف" />
+    <item android:id="@+id/menu_move" android:title="جابجایی" />
 </menu>
