--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -4,47 +4,53 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp"
-    android:background="#EAF3FF"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:background="#EDF4FF">
 
     <TextView
         android:id="@+id/txtDate"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:gravity="center"
-        android:textColor="#000000" />
+        android:layout_height="wrap_content"
+        android:text="1403/08/08"
+        android:textColor="#000"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/txtAmount"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="#000000" />
+        android:text="25,000"
+        android:textColor="#000"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/txtCategory"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="#000000" />
+        android:text="خوراک"
+        android:textColor="#000"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/txtDescription"
         android:layout_width="0dp"
+        android:layout_weight="1.5"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
         android:gravity="center"
-        android:textColor="#000000" />
+        android:text="ناهار"
+        android:textColor="#000"
+        android:textSize="14sp" />
 
     <ImageButton
         android:id="@+id/btnMore"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:contentDescription="منو"
-        android:src="@android:drawable/ic_menu_more"
-        android:tint="#000000" />
+        android:background="@drawable/circle_lightblue"
+        android:src="@drawable/ic_more_vert_black_24dp"
+        android:contentDescription="More options" />
 </LinearLayout>
