--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?> 
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,58 +18,44 @@
         android:textColor="@android:color/white"
         android:layout_marginBottom="8dp" />
 
-    <!-- سربرگ جدول -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#A5C8FF"
-        android:padding="8dp">
+        android:background="#C1DBFF"
+        android:padding="6dp">
 
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="تاریخ"
-            android:textColor="#000000"
             android:textStyle="bold"
+            android:textColor="#000"
             android:gravity="center" />
 
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="مبلغ (ریال)"
-            android:textColor="#000000"
             android:textStyle="bold"
+            android:textColor="#000"
             android:gravity="center" />
 
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="بابت"
-            android:textColor="#000000"
             android:textStyle="bold"
+            android:textColor="#000"
             android:gravity="center" />
 
         <TextView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:text="توضیحات"
-            android:textColor="#000000"
             android:textStyle="bold"
+            android:textColor="#000"
             android:gravity="center" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="⋮"
-            android:textSize="18sp"
-            android:textColor="#000000"
-            android:gravity="center"
-            android:layout_marginStart="8dp"/>
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -78,6 +64,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:scrollbars="vertical"
+        android:background="#EDF4FF"
         tools:listitem="@layout/item_transaction" />
 
     <TextView
